# sympol

./: .gitignore  .pylintrc  .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-test.yml
docs/: api.rst  conf.py  index.rst
docs/_templates/: custom-class-template.rst
examples/: classify_simplices.py
experiments/: centrally_symmetric_reflexive.py  conjecture_checker.py  edge_polytope.py  interior_points.py  ks_database.py  polymake.txt  small_polytopes.py  speed_tests.ipynb  tests.ipynb
poly/: polytope.py
scripts/: b_database.py  edge_polytope.py  ks_database.py  tests2.ipynb  tests3.ipynb
src/sympol/: __init__.py  _half_open_parallelotope.py  _hilbert_basis.py  _hilbert_basis_np.pyx  _integer_points.py  _integer_points_np.pyx  _integer_pts_hop_np.pyx  _isomorphism.py  _numba_utils.py  _random.py  _snf.py  _triangulation.py  _utils.py  cython_utils.c  cython_utils.pyx  ehrhart.py  hilbert_basis.c  integer_points.c  integer_points.pyx  integer_pts_parallelotope_np.c  parallelotope.py  point.py  point_configuration.py  polytope.py  snf.py
sympol/: cython_utils.c  database.py  hilbert_basis.c  integer_points.c  integer_points.py  integer_points.pyx  integer_pts_parallelotope.c  integer_pts_parallelotope.pyx  integer_pts_parallelotope_np.c  integer_pts_parallelotope_np.pyx  isomorphism.py  lineq.py  normal_form.py  parallelotope.py  point.py  point_configuration.py  point_list.py  polytope.py  random.py  simplex.py  snf.py  triangulation.py  utils.py
sympol/algorithms/: __init__.py  classify_simplices.py
tests/: __init__.py  test_algorithms.py  test_ehrhart.py  test_hilbert_basis.py  test_integer_points.py  test_isomorphism.py  test_lineq.py  test_normal_form.py  test_numba_utils.py  test_parallelotope.py  test_point.py  test_point_configuration.py  test_point_list.py  test_polytope.py  test_snf.py  test_triangulation.py  test_utils.py
