[project]
name = "sympol"
version = "0.0.1"
authors = [
  { name="Gabriele Balletti", email="gabriele.balletti@gmail.com" },
]
description = "A *simple* discrete geometry and integer optimization library for Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-only",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gabrieleballetti/sympol"
"Bug Tracker" = "https://github.com/gabrieleballetti/sympol/issues"

[tool.pydocstyle]
convention = "google"
