[project]
name = "sympol"
version = "0.0.1"
authors = [
  { name="Gabriele Balletti", email="gabriele.balletti@gmail.com" },
]
description = "A *simple* discrete geometry and integer optimization library for Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GPL-3.0-only",
  "Operating System :: OS Independent",
]
dependencies = [
  "igraph >= 0.10.4",
  "numpy >= 1.24.3",
  "numba >= 0.59.0",
  "pycddlib >= 2.1.6",
  "sympy >= 1.12",
]

[project.urls]
"Homepage" = "https://github.com/gabrieleballetti/sympol"
"Bug Tracker" = "https://github.com/gabrieleballetti/sympol/issues"

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "ruff",
]
docs = [
  "myst-parser",
  "pydocstyle",
  "sphinx-rtd-theme",
]

[tool.pydocstyle]
convention = "google"
